  EntityEditView.selectInputControl() refactored
  LocalEntityConnection.update() now rollbacks and throws exception in case the number of selected rows does not match the number of rows to update
  ResultIterator now extends AutoCloseable
  jminor.server.pooling.initial server configuration key changed to jminor.server.pooling.startupPoolUsers
  domainJar gradle task added to demo projects, experimenting with server application configuration (not working yet)
  DefaultEntityModel.savePreferences() now calls savePreferences() for all detail models
  LocalEntityConnection.update() bug fixed, refactored
  LocalEntityConnection.doSelectMany() method logging added for result packing
  LocalEntityConnection.doSelectMany() bug fixed, try with resources did not play happily with method logging
  module-info.java files added and fixed
  Build improvements
  LoadTest.getTitle() added, overridden in EntityLoadTestModel adding connection type, used in LoadTestPanel
  org.jminor.framework.db.http no longer depends on org.jminor.common.server.http
  Chinook demo, application gradle plugin configured
  Gradle dependencies improved, chinook demo application fixed
  Gradle application plugin configuration for demos moved to root script
  Gradle, testing the jnlp plugin
  Unused ant build files removed (most of them)
  UpdateException added, extended by RecordModifiedException
  LocalEntityConnection.update() bug fixed, did not expect entities of different types
  LocalEntityConnection.executePreparedUpdate() now returns the number of affected rows
  LocalEntityConnection.update() uses the above to throw UpdateException in case no rows are affected
  LocalEntityConnection, refactored, exeption handling improved (more work needed)
  DefaultEntity.DefaultKey.newInstance() overloaded, so that getCopy() and getOriginalCopy() work
  ColumnProperty.setValueConverter() now with wildcards