@@ -4716,3 +4716,6 @@
   LocalEntityConnection, refactored, exeption handling improved (more work needed)
   DefaultEntity.DefaultKey.newInstance() overloaded, so that getCopy() and getOriginalCopy() work
   ColumnProperty.setValueConverter() now with wildcards
+  EntityTableColumn, redundant connectionProvider field removed
+  PoolMonitor, PoolMonitorPanel, unused methods removed
+  Entities.getEntity() renamed to entity()
